neotaskprocessordeploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo-task-processor
spec:
  selector:
    matchLabels:
      app: neo-task-processor
  template:
    metadata:
      labels:
        app: neo-task-processor
    spec:
      containers:
      - name: neo-task-processor
        image: tanyongang/neo-task-processor:1.0.0
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
